<resources>
    <string name="app_name">Lage Raho</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="need_new_account">Need new account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="phone_login_button">Phone</string>
    <string name="create_account_button">Create Account</string>
    <string name="or_login_using_your">or Login using your</string>
    <string name="find_friends_menu">Find Friends</string>
    <string name="settings_menu">Settings</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="user_status">Hey, I am available now.</string>
    <string name="update">Update</string>
    <string name="menu_create_group">Create Group</string>
    <string name="enter_message_to_send">Enter message to send…</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_verification_code_here">Enter Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify_your_otp">Verify your OTP</string>
    <string name="visit_profile_user_name">User Name</string>
    <string name="visit_profile_user_status">User Status</string>
    <string name="visit_send_message">Send Message</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="send_chat_request">Send Chat Request</string>
    <string name="receiver_messages_display_here">Receiver messages</string>
    <string name="sender_messages_displays_here">Sender Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collect_your_notes">Collect Your Notes</string>
    <string name="subject_name">Subject Name</string>

</resources>
